tests/errors/poisoning/cascade-if-condition.fn
---
Description: Undefined name in if condition should not also report a bool requirement
Expected: FN3204
---

type Program
{
    fn Main -> i32
    {
        if (undefined_cond)
        {
            var y = 1
        }
        return 0
    }
}
